--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,5 +1,5 @@
-# [Choice] Go version (use -bullseye variants on local arm64/Apple Silicon): 1, 1.19, 1.18, 1-bullseye, 1.19-bullseye, 1.18-bullseye, 1-buster, 1.19-buster, 1.18-buster
 ARG VARIANT=1.15
+# [Choice] Go version (use -bullseye variants on local arm64/Apple Silicon): 1, 1.19, 1.18, 1-bullseye, 1.19-bullseye, 1.18-bullseye, 1-buster, 1.19-buster, 1.18-buster
 FROM mcr.microsoft.com/vscode/devcontainers/go:0-${VARIANT}
 
 # [Choice] Node.js version: none, lts/*, 18, 16, 14
@@ -11,7 +11,13 @@ RUN echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources
 
 # [Optional] Uncomment this section to install additional OS packages.
  RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-     && apt-get -y install --no-install-recommends libjpeg-dev libwebp-dev
+     && apt-get -y install --no-install-recommends libjpeg-dev libwebp-dev ffmpeg webp
+
+# Copy the output of the React build to the Go project
+COPY --from=npm_builder /app/build ./public
+# Copy the rest of the Go application code to the container
+COPY ../backend ./backend
+RUN mkdir -p .backend/tmp/thumbnails
 
 # [Optional] Uncomment the next lines to use go get to install anything else you need
 # USER vscode
